tests/compile/shader_modules/intrinsics.gcc.stderr
In file included from include/meta/function_construction.hpp:9,
                 from include/rcgp-meta.hpp:13,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/intrinsics.cpp:1:
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(write_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eFragment; SystemValue G = rcgp::SystemValue::eClipPosition; ShaderStage S2 = rcgp::ShaderStage::eVertex; T = vector<float, 4>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eFragment, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >(std::tuple<write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eFragment; Args = {write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = clipposition_in_fragment()::<lambda(ClipPosition)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = clipposition_in_fragment()::<lambda(ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:52:2:   required from here
   52 |         };
      |         ^
include/meta/inject_arguments.hpp:66:26: error: static assertion failed: unsupported intrinsic
   66 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:66:26: note: '(rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(write_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eCompute; SystemValue G = rcgp::SystemValue::eClipPosition; ShaderStage S2 = rcgp::ShaderStage::eVertex; T = vector<float, 4>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >, WorkGroup<1, 1, 1> >(std::tuple<write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = clipposition_in_compute()::<lambda(ClipPosition, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = clipposition_in_compute()::<lambda(ClipPosition, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:60:2:   required from here
   60 |         };
      |         ^
include/meta/inject_arguments.hpp:66:26: error: static assertion failed: unsupported intrinsic
   66 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:66:26: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eVertex)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eFragment; SystemValue G = rcgp::SystemValue::eVertexIndex; ShaderStage S2 = rcgp::ShaderStage::eVertex; T = scalar<int>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eFragment, read_only_intrinsic<rcgp::SystemValue::eVertexIndex, rcgp::ShaderStage::eVertex, scalar<int> > >(std::tuple<read_only_intrinsic<rcgp::SystemValue::eVertexIndex, rcgp::ShaderStage::eVertex, scalar<int> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eFragment; Args = {read_only_intrinsic<rcgp::SystemValue::eVertexIndex, rcgp::ShaderStage::eVertex, scalar<int> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = vertex_index_in_fragment()::<lambda(VertexIndex)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = vertex_index_in_fragment()::<lambda(VertexIndex)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:68:2:   required from here
   68 |         };
      |         ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eVertex; SystemValue G = rcgp::SystemValue::eGlobalInvocationID; ShaderStage S2 = rcgp::ShaderStage::eCompute; T = vector<unsigned int, 3>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, read_only_intrinsic<rcgp::SystemValue::eGlobalInvocationID, rcgp::ShaderStage::eCompute, vector<unsigned int, 3> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >(std::tuple<read_only_intrinsic<rcgp::SystemValue::eGlobalInvocationID, rcgp::ShaderStage::eCompute, vector<unsigned int, 3> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eVertex; Args = {read_only_intrinsic<rcgp::SystemValue::eGlobalInvocationID, rcgp::ShaderStage::eCompute, vector<unsigned int, 3> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = global_invocation_in_vertex()::<lambda(GlobalInvocationID, ClipPosition)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = global_invocation_in_vertex()::<lambda(GlobalInvocationID, ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:76:2:   required from here
   76 |         };
      |         ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eCompute)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eFragment; SystemValue G = rcgp::SystemValue::eLocalInvocationID; ShaderStage S2 = rcgp::ShaderStage::eCompute; T = vector<unsigned int, 3>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eFragment, read_only_intrinsic<rcgp::SystemValue::eLocalInvocationID, rcgp::ShaderStage::eCompute, vector<unsigned int, 3> > >(std::tuple<read_only_intrinsic<rcgp::SystemValue::eLocalInvocationID, rcgp::ShaderStage::eCompute, vector<unsigned int, 3> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eFragment; Args = {read_only_intrinsic<rcgp::SystemValue::eLocalInvocationID, rcgp::ShaderStage::eCompute, vector<unsigned int, 3> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = local_invocation_in_fragment()::<lambda(LocalInvocationID)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = local_invocation_in_fragment()::<lambda(LocalInvocationID)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:84:2:   required from here
   84 |         };
      |         ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eCompute)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eVertex; SystemValue G = rcgp::SystemValue::eLaunchID; ShaderStage S2 = rcgp::ShaderStage::eRayGeneration; T = vector<unsigned int, 3>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, read_only_intrinsic<rcgp::SystemValue::eLaunchID, rcgp::ShaderStage::eRayGeneration, vector<unsigned int, 3> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >(std::tuple<read_only_intrinsic<rcgp::SystemValue::eLaunchID, rcgp::ShaderStage::eRayGeneration, vector<unsigned int, 3> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eVertex; Args = {read_only_intrinsic<rcgp::SystemValue::eLaunchID, rcgp::ShaderStage::eRayGeneration, vector<unsigned int, 3> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = launch_id_in_vertex()::<lambda(LaunchID, ClipPosition)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = launch_id_in_vertex()::<lambda(LaunchID, ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:92:2:   required from here
   92 |         };
      |         ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eRayGeneration)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eCompute; SystemValue G = rcgp::SystemValue::eLaunchSize; ShaderStage S2 = rcgp::ShaderStage::eRayGeneration; T = vector<unsigned int, 3>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, read_only_intrinsic<rcgp::SystemValue::eLaunchSize, rcgp::ShaderStage::eRayGeneration, vector<unsigned int, 3> >, WorkGroup<1, 1, 1> >(std::tuple<read_only_intrinsic<rcgp::SystemValue::eLaunchSize, rcgp::ShaderStage::eRayGeneration, vector<unsigned int, 3> >, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {read_only_intrinsic<rcgp::SystemValue::eLaunchSize, rcgp::ShaderStage::eRayGeneration, vector<unsigned int, 3> >, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = launch_size_in_compute()::<lambda(LaunchSize, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = launch_size_in_compute()::<lambda(LaunchSize, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:97:67:   required from here
   97 |         auto bad = $shader(compute)(LaunchSize ls, WorkGroup <1> group) {};
      |                                                                          ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eRayGeneration)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eVertex; SystemValue G = rcgp::SystemValue::eHitT; ShaderStage S2 = rcgp::ShaderStage::eClosestHit; T = scalar<float>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, read_only_intrinsic<rcgp::SystemValue::eHitT, rcgp::ShaderStage::eClosestHit, scalar<float> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >(std::tuple<read_only_intrinsic<rcgp::SystemValue::eHitT, rcgp::ShaderStage::eClosestHit, scalar<float> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eVertex; Args = {read_only_intrinsic<rcgp::SystemValue::eHitT, rcgp::ShaderStage::eClosestHit, scalar<float> >, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = hit_time_in_vertex()::<lambda(HitTime, ClipPosition)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = hit_time_in_vertex()::<lambda(HitTime, ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:105:2:   required from here
  105 |         };
      |         ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eClosestHit)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(read_only_intrinsic<G, S2, T>&, InjectionCounters&) [with ShaderStage S1 = rcgp::ShaderStage::eCompute; SystemValue G = rcgp::SystemValue::ePrimitiveID; ShaderStage S2 = rcgp::ShaderStage::eClosestHit; T = scalar<unsigned int>]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, read_only_intrinsic<rcgp::SystemValue::ePrimitiveID, rcgp::ShaderStage::eClosestHit, scalar<unsigned int> >, WorkGroup<1, 1, 1> >(std::tuple<read_only_intrinsic<rcgp::SystemValue::ePrimitiveID, rcgp::ShaderStage::eClosestHit, scalar<unsigned int> >, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {read_only_intrinsic<rcgp::SystemValue::ePrimitiveID, rcgp::ShaderStage::eClosestHit, scalar<unsigned int> >, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = primitive_id_in_compute()::<lambda(PrimitiveID, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = primitive_id_in_compute()::<lambda(PrimitiveID, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/intrinsics.cpp:110:69:   required from here
  110 |         auto bad = $shader(compute)(PrimitiveID pid, WorkGroup <1> group) {};
      |                                                                            ^
include/meta/inject_arguments.hpp:59:26: error: static assertion failed: unsupported intrinsic
   59 |         static_assert(S1 == S2, "unsupported intrinsic"_ss);
      |                       ~~~^~~~~
include/meta/inject_arguments.hpp:59:26: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eClosestHit)' evaluates to false
